# FutureLovelyComposer

./: .gitignore  CMakeLists.txt  README.md  build.bat
gdtune/: CMakelists.txt
gdtune/src/: audio_plugin_host.cpp  audio_plugin_host.hpp  clap-resolve_entrypoint.cpp  clap-scanner.cpp  common.hpp  daw_engine.cpp  daw_engine.hpp  daw_plugin_host.cpp  daw_plugin_host.hpp  gdextension_registration.cpp  gdtune.cpp  gdtune.hpp
godot_project/: globalv.gd  icon.svg.import  loaded_plugin_params_json.json  main.gd  main.tscn  project.godot
godot_project/art/: sprite2.PNG.import
godot_test_project/: export_presets.cfg  main.tscn
